<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textSize="36sp" />
            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="36sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/signOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signOut"/>
            <Button
                android:id="@+id/profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile" />
        </LinearLayout>
        <TextView
            android:id="@+id/appliances"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appliances"
            android:textSize="24sp" />
        <Button
            android:id="@+id/add_appliance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New appliance" />
        <LinearLayout
            android:id="@+id/appLl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        </LinearLayout>
        <TextView
            android:id="@+id/summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/summary"
            android:textSize="24sp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/pie" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/ac"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Air Conditioner"
                    android:textSize="12sp" />
                <TextView
                    android:id="@+id/fridge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Mini Fridge"
                    android:textSize="12sp" />
                <TextView
                    android:id="@+id/bathroom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Bathroom Lights"
                    android:textSize="12sp" />
                <TextView
                    android:id="@+id/furnace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Furnace"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save Some Energy!" />
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigationView"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/colorPrimary"
        app:itemIconTint="#ffffff"
        app:itemTextColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/navigation" />

</androidx.constraintlayout.widget.ConstraintLayout>